added swagger comments + soft delete user
